cookbooks/microservices/load_simulator/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "zeus-load-simulator"
  labels:
    app.kubernetes.io/instance: "zeus-load-simulator"
    app.kubernetes.io/name: "zeus-load-simulator"
    app.kubernetes.io/managed-by: "zeus"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: "zeus-load-simulator"
    app.kubernetes.io/name: "zeus-load-simulator"
